Initial version of postinstall script for node.js/electron

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "test-runners": "npm run test-runner:ava && npm run test-runner:mocha && npm run test-runner:jest",
     "check-environment": "node scripts/check-environment.js",
     "lint:cpp": "find src -name \"*.?pp\" | xargs clang-format --dry-run --Werror",
-    "lint:fix:cpp": "find src -name \"*.?pp\" | xargs clang-format -i"
+    "lint:fix:cpp": "find src -name \"*.?pp\" | xargs clang-format -i",
+    "postinstall": "scripts/submit-analytics.js"
   },
   "dependencies": {
     "@realm.io/common": "^0.1.1",
